# DataInfraPilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-push-image.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/api/: main.py
backend/src/api/routers/: application.py  cluster.py  volume.py
backend/src/api/schemas/: __init__.py  cluster.py
backend/src/core/: config.py  deployment_status.py  exceptions.py  template_loader.py  utils.py
backend/src/core/apps/: airflow_application.py  base_application.py  grafana_application.py  other.py  prefect_application.py  spark_application.py  superset_application.py
backend/src/core/kubernetes/: __init__.py  chart_config.py  cluster_manager.py  helm_client.py  kubernetes_client.py  kubernetes_cluster.py
backend/src/core/providers/: base_provider.py  hetzner_provider.py  provider_factory.py
backend/src/core/templates/: cloud-init-autoscaler.yml  cloud-init-worker.yml
backend/src/database/handlers/: base_database_handler.py  sqlite_handler.py
backend/src/database/models/: __init__.py  application.py  cluster.py
backend/src/demo/orchestration/: upload_to_db.py
backend/src/demo/scrapers/: base_scraper.py  base_transformation.py
backend/src/demo/storage/: base_storage.py  postgres_storage.py
backend/tests/: test_application_factory.py  test_template_loader.py
demo/: .dockerignore  .env.sample  Dockerfile  README.md  Real_Estate_Analytics_Dashboard.json  Scrapers_Monitoring_Dashboard.json  pyproject.toml  real_estate_pipeline_dag.py
demo/src/: utils.py
demo/src/orchestration/: run_pipeline.sh  scrape.py  transform.py  upload_to_db.py  utils.py
demo/src/scrapers/: base_scraper.py  base_transformation.py
demo/src/scrapers/bezrealitky/: scraper.py  transformation.py
demo/src/scrapers/sreality/: scraper.py  transformation.py
demo/src/storage/: adls_storage.py  base_storage.py  postgres_storage.py
demo/src/storage/schemas/: rent.sql  sale.sql  scraper_run_metadata.sql
frontend/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: StatusComponent.tsx  StepProgress.tsx
frontend/src/components/applications/: AppHealthCheck.tsx  CompactAppHealthCheck.tsx  CredentialsModal.tsx  DeployAppModal.tsx  UpdateConfigDialog.tsx
frontend/src/components/clusters/: ControlPlaneConfig.tsx  CreateClusterModal.tsx  ProviderConfig.tsx
frontend/src/components/layout/: ActivityDropdown.tsx  MainLayout.tsx  Navbar.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/components/ui/: alert.tsx  select.tsx  toggle.tsx
frontend/src/data/: applications.ts  mockData.ts  providers.ts
frontend/src/hooks/: useHealthCheck.ts
frontend/src/pages/: ClusterDetails.tsx  Clusters.tsx  Dashboard.tsx  DeploymentDetails.tsx  Deployments.tsx  Domains.tsx  Volumes.tsx
frontend/src/services/: api.ts  apiClient.ts
frontend/src/store/: index.ts
frontend/src/styles/: modal-selection.css
frontend/src/types/: index.ts  stateEnum.ts
frontend/src/utils/: applicationConfig.ts  costCalculations.ts
src/api/: main.py
src/api/routers/: application.py  cluster.py  volume.py
src/api/schemas/: application.py  cluster.py  deployment.py  volume.py
src/core/: config.py  exceptions.py  template_loader.py  utils.py
src/core/apps/: airflow_application.py  application_config.py  application_factory.py  base_application.py  grafana_application.py  hashicorp_vault_application.py  other.py  spark_application.py
src/core/apps/actions/: apply_template_action.py  apply_template_post_install_action.py  base_post_install_action.py  create_secret_action.py
src/core/kubernetes/: chart_config.py  cluster_manager.py  cluster_state.py  configuration.py  deployment_status.py  helm_client.py  kubernetes_client.py  kubernetes_cluster.py
src/core/providers/: base_provider.py  hetzner_provider.py  provider_factory.py
src/core/providers/hetzner/: hetzner_provider.py
src/core/templates/: cloud-init-master.yml
src/core/templates/kubernetes/: cert-manager-acme-certificate.yaml  cert-manager-acme-issuer.yaml  (+6 more)
src/database/handlers/: base_database_handler.py  sqlite_handler.py
src/database/models/: __init__.py  application.py  base_model.py  cluster.py  cluster_application.py  deployment.py  volume.py
src/demo/: utils.py
src/demo/orchestration/: scrape.py  transform.py  upload_to_db.py  utils.py
src/demo/scrapers/: base_scraper.py  base_transformation.py
src/demo/storage/: adls_storage.py  base_storage.py  postgres_storage.py
(+30 files in other folders)
