[project]
name = "datainfrapilot-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ilya Tsakunov", email = "ilyatsakunov@seznam.cz" }
]
requires-python = ">=3.12.2"
dependencies = [
    "asyncio>=3.4.3",
    "asyncssh>=2.20.0",
    "fastapi>=0.115.11",
    "fastapi-utils>=0.8.0",
    "hcloud>=2.3.0",
    "jinja2>=3.1.6",
    "kubernetes>=32.0.1",
    "pandas>=2.2.3",
    "pyhelm3>=0.4.0",
    "python-dotenv>=1.0.1",
    "setuptools>=76.0.0",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
demo = [
    "azure-identity>=1.23.0",
    "azure-storage-blob>=12.25.1",
    "fastparquet>=2024.11.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "psycopg2>=2.9.10",
    "pyarrow>=20.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
